--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production --base-href https://g5studio.github.io/syntron-official/",
     "watch": "ng build --watch --configuration development",
+    "deploy": "ngh --dir dist/syntron-official",
     "test": "ng test"
   },
   "private": true,
@@ -28,6 +29,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "angular-cli-ghpages": "^1.0.7",
     "eslint": "^8.42.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
