--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "paths": {
-      "@shared/*": ["src/app/shared/*"],
+      "@shared/*": ["src/app/modules/shared/*"],
       "@utilities/*": ["src/app/utilities/*"]
     }
   },
