--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "lib": ["es2020", "dom"],
     "paths": {
       "@shared/*": ["src/app/modules/shared/*"],
-      "@utilities/*": ["src/app/utilities/*"]
+      "@utilities/*": ["src/utilities/*"]
     }
   },
   "angularCompilerOptions": {
